# marxs-lynx

./: .rtd-environment.yml  .travis.yml  MANIFEST.in  README.rst  setup.cfg  setup.py
docs/: index.rst
docs/marxs-lynx/: index.rst
licenses/: LICENSE.rst
marxs-lynx/: lynx.py  setup_package.py
marxslynx/: __init__.py  bendgratings.py  conftest.py  load_csv.py  lynx.py  mirror.py  ralfgrating.py  simulations.py  utils.py
marxslynx/data/: efficiency.csv
marxslynx/ingestdata/: Aeff.py  gratingefficiency.py
