[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled
addopts = -p no:warnings

[ah_bootstrap]
auto_use = True

[pycodestyle]
# E101 - mix of tabs and spaces
# W191 - use of tabs
# W291 - trailing whitespace
# W292 - no newline at end of file
# W293 - trailing whitespace
# W391 - blank line at end of file
# E111 - 4 spaces per indentation level
# E112 - 4 spaces per indentation level
# E113 - 4 spaces per indentation level
# E901 - SyntaxError or IndentationError
# E902 - IOError
select = E101,W191,W291,W292,W293,W391,E111,E112,E113,E901,E902
exclude = extern,sphinx,*parsetab.pyastropy_helpers,ah_bootstrap.py,conftest.py,docs/conf.py,setup.py

[metadata]
name = marxslynx
description = Lynx X-ray mission simulator for MARXS
long_description = MARXS is a ray-trace code to simulate X-ray missions. In particular, astronomical sources that generate X-rays can be defined as X-ray sources that MARXS then ray-traces these X-rays through the mirrors, gratings, detectors etc. of a satellite. This package defines the setup for the Lynx X-ray concept study, so that Lynx simulation can be done in MARXS. The details of the Lynx mission are still under development, and this package will continuously develop to adjust to that. It concentates on simulating the grating instrument and in particular the CAT grating option that is studied. Implementations for other instruments might be missing or more incomplete.
author = MIT / Hans Moritz Guenther
author_email = hgunther@mit.edu
license = GNU GPL v3+
url = marxs-lynx.readthedocs.org
edit_on_github = True
github_project = hamogu/marxs-lynx
# version should be PEP386 compatible (http://www.python.org/dev/peps/pep-0386)
version = 0.1.dev
python_requires = ">=3.6"

[options]
# install_requires should be formatted as a semicolon-separated list, e.g.:
# install_requires = astropy; scipy; matplotlib
install_requires = astropy; marxs
zip_safe = False
use_2to3 = False

[entry_points]

[flake8]
exclude = extern,sphinx,*parsetab.py,astropy_helpers,ah_bootstrap.py,conftest.py,docs/conf.py,setup.py
