[metadata]
name = marxslynx
author = MIT / Hans Moritz Guenther
author_email = hgunther@mit.edu
license = GNU GPL v3+
license_file = licenses/LICENSE.rst
url = https://github.com/hamogu/marxs-lynx
description = Lynx X-ray mission simulator for MARXS
long_description = MARXS is a ray-trace code to simulate X-ray missions. In particular, astronomical sources that generate X-rays can be defined as X-ray sources that MARXS then ray-traces these X-rays through the mirrors, gratings, detectors etc. of a satellite. This package defines the setup for the Lynx X-ray concept study, so that Lynx simulation can be done in MARXS. The details of the Lynx mission are still under development, and this package will continuously develop to adjust to that. It concentates on simulating the grating instrument and in particular the CAT grating option that is studied. Implementations for other instruments might be missing or more incomplete.
edit_on_github = False
github_project = hamogu/marxs-lynx

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    marxs


[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
marxslynx = data/*
marxslynx = data/gratings/*